--- a/DavidMartinez_anim/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DavidMartinez_anim/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -211,7 +211,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/MixamoAnimations
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Animations
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -269,7 +269,9 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_MyCharacter.BP_MyCharacter
+OpenAssetsAtExit=/Game/ThirdPerson/Animations/ABP_MyCharacterAnimations.ABP_MyCharacterAnimations
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -494,7 +496,7 @@ AnimStateTransitionNode.Notifications=True
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
 AnimMontage.Animation=True
-AnimMontage.BlendOption=False
+AnimMontage.BlendOption=True
 AnimMontage.SyncGroup=True
 AnimMontage.AdditiveSettings=True
 AnimMontage.TimeStretchCurve=True
@@ -611,6 +613,26 @@ AnimGraphNode_LayeredBoneBlend.Functions=True
 AnimGraphNode_LayeredBoneBlend.Runtime=True
 AnimGraphNode_LayeredBoneBlend.Tag=True
 AnimGraphNode_LayeredBoneBlend.Performance=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.HLOD=True
+BoxComponent.ComponentTick=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Animation=True
@@ -738,10 +760,10 @@ Character=
 Pawn=
 EditorNotifyObject="\"Object.Event.Event\" "
 EditorAnimBaseObj="\"Object.Event.Event\" "
-AnimMontage="\"Object.BlendOption.BlendOut\" "
-AnimCompositeBase="\"Object.BlendOption.BlendOut\" "
-AnimSequenceBase="\"Object.BlendOption.BlendOut\" "
-AnimationAsset="\"Object.BlendOption.BlendOut\" "
+AnimMontage=
+AnimCompositeBase=
+AnimSequenceBase=
+AnimationAsset=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_Base=
@@ -749,26 +771,26 @@ K2Node=
 EdGraphNode=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem1=/Game/ThirdPerson/Animations/AnimationMontages/AM_Combo3
-MRUItem2=/Game/ThirdPerson/Animations/AnimationMontages/AM_Combo2
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_MyCharacter
-MRUItem4=/Game/Characters/Mannequins/Animations/Manny/MM_Jump
-MRUItem5=/Game/Characters/Mannequins/Animations/Manny/MM_Land
-MRUItem6=/Game/ThirdPerson/Animations/ABP_MyCharacterAnimations
-MRUItem7=/Game/ThirdPerson/Animations/AO_Rifle
-MRUItem8=/Game/ThirdPerson/MixamoAnimations/AimUp
-MRUItem9=/Game/ThirdPerson/MixamoAnimations/AimRightUp
-MRUItem10=/Game/ThirdPerson/MixamoAnimations/AimRightDown
-MRUItem11=/Game/ThirdPerson/MixamoAnimations/AimRight
-MRUItem12=/Game/ThirdPerson/MixamoAnimations/AimLeftUp
-MRUItem13=/Game/ThirdPerson/MixamoAnimations/AimLeftDown
-MRUItem14=/Game/ThirdPerson/MixamoAnimations/AimLeft
-MRUItem15=/Game/ThirdPerson/MixamoAnimations/AimDown
-MRUItem16=/Game/ThirdPerson/MixamoAnimations/AimCenter
-MRUItem17=/Game/ThirdPerson/MixamoAnimations/RifleAimingIdle_UE_Anim
-MRUItem18=/Game/ThirdPerson/MixamoAnimations/RifleAimingIdleRight_UE_Anim
-MRUItem19=/Game/ThirdPerson/Animations/BlendSpaces/BS_WalkRunRifle
+MRUItem0=/Game/ThirdPerson/Animations/ABP_MyCharacterAnimations
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_MyCharacter
+MRUItem2=/Game/ThirdPerson/Input/IMC_Default
+MRUItem3=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_Rifle
+MRUItem5=/Game/ThirdPerson/Animations/AnimationMontages/AM_Equip
+MRUItem6=/Game/ThirdPerson/Animations/AnimationMontages/AM_Combo3
+MRUItem7=/Game/ThirdPerson/Animations/AnimationMontages/AM_Combo2
+MRUItem8=/Game/Characters/Mannequins/Animations/Manny/MM_Jump
+MRUItem9=/Game/Characters/Mannequins/Animations/Manny/MM_Land
+MRUItem10=/Game/ThirdPerson/Animations/AO_Rifle
+MRUItem11=/Game/ThirdPerson/MixamoAnimations/AimUp
+MRUItem12=/Game/ThirdPerson/MixamoAnimations/AimRightUp
+MRUItem13=/Game/ThirdPerson/MixamoAnimations/AimRightDown
+MRUItem14=/Game/ThirdPerson/MixamoAnimations/AimRight
+MRUItem15=/Game/ThirdPerson/MixamoAnimations/AimLeftUp
+MRUItem16=/Game/ThirdPerson/MixamoAnimations/AimLeftDown
+MRUItem17=/Game/ThirdPerson/MixamoAnimations/AimLeft
+MRUItem18=/Game/ThirdPerson/MixamoAnimations/AimDown
+MRUItem19=/Game/ThirdPerson/MixamoAnimations/AimCenter
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Mannequins/Meshes/SK_Mannequin.SK_Mannequin=0
@@ -809,6 +831,7 @@ MRUItem19=/Game/ThirdPerson/Animations/BlendSpaces/BS_WalkRunRifle
 /Game/Characters/Mannequins/Animations/Manny/MM_Jump.MM_Jump=1
 /Game/ThirdPerson/Animations/AnimationMontages/AM_Combo2.AM_Combo2=0
 /Game/ThirdPerson/Animations/AnimationMontages/AM_Combo3.AM_Combo3=0
+/Game/ThirdPerson/Animations/AnimationMontages/AM_Equip.AM_Equip=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletonEditor",Commands=)
