--- a/DavidMartinez_anim/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DavidMartinez_anim/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -269,7 +269,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_MyCharacter.BP_MyCharacter
 OpenAssetsAtExit=/Game/ThirdPerson/Animations/ABP_MyCharacterAnimations.ABP_MyCharacterAnimations
 
